--- a/FunFacts/Base.lproj/Main.storyboard
+++ b/FunFacts/Base.lproj/Main.storyboard
@@ -1,25 +1,93 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B23" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="FunFacts" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="An intreresting fact goes here" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6wQ-jG-De3">
+                                <rect key="frame" x="39" y="78" width="248" height="332"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="19"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Did you know?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GIF-Fu-ELy">
+                                <rect key="frame" x="52" y="36" width="129" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="98" id="CLY-Ik-am5"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="24" id="Qbt-ZV-omv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" red="0.925944983959198" green="0.92591726779937744" blue="0.92593294382095337" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eBM-7F-wp8">
+                                <rect key="frame" x="52" y="431" width="216" height="61"/>
+                                <color key="backgroundColor" red="1" green="1" blue="0.99607843137254903" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="61" id="2kU-Cd-x1n"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="216" id="Of7-1n-Wgk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
+                                <color key="tintColor" red="0.29411764705882354" green="0.68627450980392157" blue="0.6470588235294118" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Show another Fun Fact">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="showFunFact" destination="vXZ-lx-hvc" eventType="touchUpInside" id="P4o-bT-2Mq"/>
+                                </connections>
+                            </button>
+                            <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="BO2-G2-1lB">
+                                <rect key="frame" x="0.0" y="518" width="320" height="50"/>
+                            </adBannerView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.3529411764705882" green="0.73333333333333328" blue="0.70980392156862748" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="6wQ-jG-De3" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="78" id="3eo-tm-3uO"/>
+                            <constraint firstItem="GIF-Fu-ELy" firstAttribute="top" relation="greaterThanOrEqual" secondItem="jyV-Pf-zRb" secondAttribute="bottom" priority="1" constant="16" id="CzC-cq-Bri"/>
+                            <constraint firstAttribute="centerY" secondItem="6wQ-jG-De3" secondAttribute="centerY" constant="40" id="GQe-lv-bmr"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="eBM-7F-wp8" secondAttribute="bottom" constant="76" id="GlA-Cr-o59"/>
+                            <constraint firstItem="6wQ-jG-De3" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="23" id="Hfe-oD-8co"/>
+                            <constraint firstItem="GIF-Fu-ELy" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="36" id="K44-zt-7Oo"/>
+                            <constraint firstItem="GIF-Fu-ELy" firstAttribute="leading" secondItem="eBM-7F-wp8" secondAttribute="leading" id="SuF-Kj-Hcr"/>
+                            <constraint firstItem="GIF-Fu-ELy" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="16" id="aez-jj-uu1"/>
+                            <constraint firstItem="6wQ-jG-De3" firstAttribute="centerX" secondItem="eBM-7F-wp8" secondAttribute="centerX" constant="3" id="hcC-r6-NVn"/>
+                            <constraint firstAttribute="centerX" secondItem="6wQ-jG-De3" secondAttribute="centerX" constant="-3" id="izd-4N-lbj"/>
+                            <constraint firstItem="BO2-G2-1lB" firstAttribute="centerX" secondItem="eBM-7F-wp8" secondAttribute="centerX" id="jhV-O4-zad"/>
+                            <constraint firstAttribute="centerX" secondItem="eBM-7F-wp8" secondAttribute="centerX" id="qPb-YN-r3y"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="eBM-7F-wp8" secondAttribute="trailing" constant="36" id="qeN-ug-jWB"/>
+                            <constraint firstItem="eBM-7F-wp8" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="36" id="rZV-f8-Imq"/>
+                            <constraint firstItem="BO2-G2-1lB" firstAttribute="bottom" secondItem="2fi-mo-0CV" secondAttribute="top" id="zBD-OL-Gj3"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="adBannerView" destination="BO2-G2-1lB" id="d1E-xI-NPl"/>
+                        <outlet property="funFactButton" destination="eBM-7F-wp8" id="gIw-rt-2vl"/>
+                        <outlet property="funFactLabel" destination="6wQ-jG-De3" id="XUX-d0-SuP"/>
+                        <outlet property="viewControllerOutlet" destination="kh9-bI-dsS" id="nkP-R2-eRM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="173" y="378"/>
         </scene>
     </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
